2008-02-27  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-query.c: corrected a bug in gda_query_execute() where
	an error was reported even when there was none (thanks to Phil Longstaff)

3.0.2:

2008-01-26  Armin Burgmeier  <armin@openismus.com>

	* libgda/gda-server-operation.c:
	(xml_load_file): Don't leak this_lang, ignore entry when id is NULL
	which caused a segfault on Windows.

2007-10-29  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove no from ALL_LINGUAS.

2007-10-29  Murray Cumming  <murrayc@murrayc.com>

	* providers/postgres/gda-postgres-provider.c:
	(gda_postgres_provider_open_connection),
	(gda_postgres_provider_perform_operation):
	Put single quotes around the user and password, as 
	mentioned in the PQconnectdb() documentation, so that 
	passwords can contain spaces. Bug #491171.

2007-06-17  Vivien Malerba <malerba@gnome-db.org>
	
	* libgda/graph/gda-graph.c: correctly interpret the ID of a
	graph when loaded from XML

2007-06-04  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-column.c: don't g_free() several times the same string
	* libgda/gda-connection.c: correctly output the number of rows in a returned
	data model when that number is not known.

2007-06-03  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-client.c: fixed gda_client_find_connection() where the first existing
	connection was always returned regardless of the requested DSN.

2007-05-28  Hans de Goede <j.w.r.degoede@hhs.nl>

	* providers/ldap/gda-ldap.h:
	Define LDAP_DEPRECATED to fix missing prototype warnings. At least
	2 of tese warnings were fatal bugs on 64 bit platforms (because the compiler 
	then assumes the function returns an int == 32 bit, where as in reality it 
	returns a pointer == 64 bit).

2007-05-21  Vivien Malerba <malerba@gnome-db.org>

	* providers/sqlite/gda-sqlite-provider.c: fixed the NOT NULL reported attibute for table's fields
	* data/sales_test.db: complexified a bit the sample database